modified:   accounts/migrations/0001_initial.py 	new file:   media/line_docs/2023/04/Email__Marcelo_Augusto_Botan_da_Silva__Outlook.pdf 	new file:   printers/__init__.py 	new file:   printers/admin.py 	new file:   printers/apps.py 	new file:   printers/migrations/__init__.py 	new file:   printers/models.py 	new file:   printers/tests.py 	new file:   printers/views.py 	modified:   sapore_controle/settings.py 	modified:   sapore_controle/urls.py 	new file:   support/__init__.py 	new file:   support/admin.py 	new file:   support/apps.py 	new file:   support/migrations/__init__.py 	new file:   support/models.py 	new file:   support/tests.py 	new file:   support/views.py 	modified:   telecom/forms.py 	modified:   telecom/migrations/0001_initial.py 	new file:   telecom/migrations/0002_branch_line_smartphone_vivobox_delete_usersession.py 	new file:   telecom/migrations/0003_line_action_alter_line_plan.py 	new file:   telecom/migrations/0004_alter_line_action.py 	modified:   telecom/models.py 	modified:   telecom/templates/telecom/line/line_add.html 	modified:   telecom/templates/telecom/line/line_details.html 	modified:   telecom/templates/telecom/line/line_edit.html 	modified:   telecom/templates/telecom/smartphone/smartphone_add.html 	modified:   telecom/templates/telecom/smartphone/smartphone_details.html 	modified:   telecom/templates/telecom/smartphone/smartphone_edit.html 	modified:   telecom/templates/telecom/vivobox/vivobox_add.html 	modified:   telecom/templates/telecom/vivobox/vivobox_details.html 	modified:   telecom/templates/telecom/vivobox/vivobox_edit.html 	modified:   telecom/views.py

--- a/telecom/templates/telecom/line/line_details.html
+++ b/telecom/templates/telecom/line/line_details.html
@@ -29,6 +29,9 @@
             <dd>{% if line.sim_card %}{{line.sim_card}}{% else %}-{% endif %}</dd>
             <dt>Nota Fiscal</dt>
             <dd>{% if line.receipt %}{{line.receipt}}{% else %}-{% endif %}</dd>
+            <dt>Autorização</dt>
+            <dd>{% if line.auth_attachment == 'False' or not line.auth_attachment %}-
+                {% else %}<a href="/media/{{line.auth_attachment}}">Arquivo</a>{% endif %}</dd>
         </div>
         <div class="col">
             <dt>Plano</dt>
@@ -37,6 +40,12 @@
             <dd>{% if line.sim_card_old %}{{line.sim_card_old}}{% else %}-{% endif %}</dd>
             <dt>Data da Última Atualização</dt>
             <dd>{% if line.date_update %}{{line.date_update|date:'d/m/Y'}}{% else %}-{% endif %}</dd>
+            <dt>Nome Mapeado</dt>
+            <dd>{% if line.name_mapped %}Sim
+                {% else %}Não{% endif %}</dd>
+            <dt>CR Mapeado</dt>
+            <dd>{% if line.branch_mapped %}Sim
+                {% else %}Não{% endif %}</dd>
         </div>
     </div>
 </div>
