modified:   .gitignore 	modified:   telecom/forms.py 	modified:   telecom/models.py 	modified:   telecom/templates/telecom/line/line_details.html 	modified:   telecom/views.py

--- a/telecom/templates/telecom/line/line_details.html
+++ b/telecom/templates/telecom/line/line_details.html
@@ -15,37 +15,41 @@
         <div class="col">
             <dt>Usuário</dt>
             <dd>{% if line.name %}{{line.name}}{% else %}-{% endif %}</dd>
-            <dt>Número</dt>
-            <dd>{% if line.number %}{{line.number}}{% else %}-{% endif %}</dd>
             <dt>Filial</dt>
             <dd>{% if line.branch %}{{line.branch}}{% else %}-{% endif %}</dd>
+            <dt>Ação</dt>
+            <dd>{% if line.action %}{{line.action}}{% else %}-{% endif %}</dd>
             <dt>Status</dt>
             <dd>{% if line.status %}{{line.status}}{% else %}-{% endif %}</dd>
         </div>
         <div class="col">
+            <dt>Número</dt>
+            <dd>{% if line.number %}{{line.number}}{% else %}-{% endif %}</dd>
             <dt>Operadora</dt>
             <dd>{% if line.telecom %}{{line.telecom}}{% else %}-{% endif %}</dd>
-            <dt>SIM Card</dt>
-            <dd>{% if line.sim_card %}{{line.sim_card}}{% else %}-{% endif %}</dd>
-            <dt>Nota Fiscal</dt>
-            <dd>{% if line.receipt %}{{line.receipt}}{% else %}-{% endif %}</dd>
+            <dt>Nome Mapeado</dt>
+            <dd>{% if line.name_mapped %}Sim
+                {% else %}Não{% endif %}</dd>
             <dt>Autorização</dt>
             <dd>{% if line.auth_attachment == 'False' or not line.auth_attachment %}-
                 {% else %}<a href="/media/{{line.auth_attachment}}">Arquivo</a>{% endif %}</dd>
         </div>
         <div class="col">
+            <dt>SIM Card</dt>
+            <dd>{% if line.sim_card %}{{line.sim_card}}{% else %}-{% endif %}</dd>
             <dt>Plano</dt>
             <dd>{% if line.plan %}{{line.plan}}{% else %}-{% endif %}</dd>
-            <dt>SIM card Anterior</dt>
-            <dd>{% if line.sim_card_old %}{{line.sim_card_old}}{% else %}-{% endif %}</dd>
-            <dt>Data da Última Atualização</dt>
-            <dd>{% if line.date_update %}{{line.date_update|date:'d/m/Y'}}{% else %}-{% endif %}</dd>
-            <dt>Nome Mapeado</dt>
-            <dd>{% if line.name_mapped %}Sim
-                {% else %}Não{% endif %}</dd>
             <dt>CR Mapeado</dt>
             <dd>{% if line.branch_mapped %}Sim
                 {% else %}Não{% endif %}</dd>
+        </div>
+        <div class="col">
+            <dt>SIM card Anterior</dt>
+            <dd>{% if line.sim_card_old %}{{line.sim_card_old}}{% else %}-{% endif %}</dd>
+            <dt>Nota Fiscal</dt>
+            <dd>{% if line.receipt %}{{line.receipt}}{% else %}-{% endif %}</dd>
+            <dt>Data da Última Atualização</dt>
+            <dd>{% if line.date_update %}{{line.date_update|date:'d/m/Y'}}{% else %}-{% endif %}</dd>
         </div>
     </div>
 </div>
