modified:   telecom/forms.py 	modified:   telecom/models.py 	modified:   telecom/templates/telecom/line/index.html 	modified:   telecom/templates/telecom/smartphone/index.html 	modified:   telecom/templates/telecom/smartphone/smartphone_details.html 	modified:   telecom/templates/telecom/vivobox/index.html 	modified:   telecom/templates/telecom/vivobox/vivobox_details.html 	modified:   telecom/views.py 	modified:   templates/partials/_nav.html

--- a/telecom/templates/telecom/line/index.html
+++ b/telecom/templates/telecom/line/index.html
@@ -97,6 +97,7 @@
     <table class="table mb-2">
         <thead>
             <tr>
+                <th><label scope="col">Operadora</label></th>
                 <th><label scope="col">Linha</label></th>
                 <th><label scope="col">Nome</label></th>
                 <th><label scope="col">Filial</label></th>
@@ -106,6 +107,7 @@
         <tbody>
             {% for line in lines %}
                 <tr>
+                    <td>{{line.telecom}}</td>
                     <td><a href="{% url 'line_details' line.id %}">{{line.number}}</a></td>
                     <td>{{line.name}}</td>
                     <td>{{line.branch}}</td>
