--- a/telecom/templates/telecom/vivobox/vivobox_details.html
+++ b/telecom/templates/telecom/vivobox/vivobox_details.html
@@ -14,23 +14,25 @@
         <div class="col">
             <dt>Usuário</dt>
             <dd>{% if vivobox.name %}{{vivobox.name}}{% else %}-{% endif %}</dd>
-            <dt>Número</dt>
-            <dd>{% if vivobox.number %}{{vivobox.number}}{% else %}-{% endif %}</dd>
             <dt>Filial</dt>
             <dd>{% if vivobox.branch %}{{vivobox.branch}}{% else %}-{% endif %}</dd>
             <dt>Status</dt>
             <dd>{% if vivobox.status %}{{vivobox.status}}{% else %}-{% endif %}</dd>
         </div>
         <div class="col">
-            <dt>IMEI 1</dt>
-            <dd>{% if vivobox.imei_1 %}{{vivobox.imei_1}}{% else %}-{% endif %}</dd>
+            <dt>Número</dt>
+            <dd>{% if vivobox.number %}{{vivobox.number}}{% else %}-{% endif %}</dd>
             <dt>Modelo</dt>
-            <dd>{% if vivobox.s_model %}{{vivobox.s_model}}{% else %}-{% endif %}</dd>
-            <dt>Nota Fiscal</dt>
-            <dd>{% if vivobox.receipt %}{{vivobox.receipt}}{% else %}-{% endif %}</dd>
+            <dd>{% if vivobox.v_model %}{{vivobox.v_model}}{% else %}-{% endif %}</dd>
             <dt>Autorização</dt>
             <dd>{% if vivobox.auth_attachment == 'False' or not vivobox.auth_attachment %}-
                 {% else %}<a href="/media/{{vivobox.auth_attachment}}">Arquivo</a>{% endif %}</dd>
+        </div>
+        <div class="col">
+            <dt>IMEI 1</dt>
+            <dd>{% if vivobox.imei_1 %}{{vivobox.imei_1}}{% else %}-{% endif %}</dd>
+            <dt>Nota Fiscal</dt>
+            <dd>{% if vivobox.receipt %}{{vivobox.receipt}}{% else %}-{% endif %}</dd>
         </div>
         <div class="col">
             <dt>IMEI 2</dt>
