--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -41,6 +41,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
+                {%if '1' in '2'%}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Suporte Sede
@@ -59,6 +60,7 @@
                         <a class="dropdown-item" href="{% url 'dashboard' %}">Inventário</a>
                     </ul>
                 </li>
+                {%endif%}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Telecom
@@ -75,6 +77,7 @@
                                 <a class="dropdown-item" href="{% url 'vivobox_list' %}">VivoBox</a>
                             </ul>
                         </li>
+                        {%if '1' in '2'%}
                         <li class="dropdown-submenu">
                             <a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#">
                                 Fixa
@@ -84,6 +87,7 @@
                                 <a class="dropdown-item" href="{% url 'line_list' %}">Contratos</a>
                             </ul>
                         </li>
+                        {%endif%}
                     </ul>
                 </li>
                 <li>
