--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -41,7 +41,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                {%if '1' in '2'%}
+                {%if 'admin' in user.groups.get.name or 'sapore' in user.groups.get.name  %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown" href="{% url 'branch_list' %}">
+                        Filiais
+                    </a>
+                </li>
+                {%endif%}
+                {%if 'admin' in user.groups.get.name or user.groups.get.name == 'sapore_support' %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Suporte Sede
@@ -51,6 +58,8 @@
                         <a class="dropdown-item" href="{% url 'dashboard' %}">Inventário</a>
                     </ul>
                 </li>
+                {%endif%}
+                {%if 'admin' in user.groups.get.name or user.groups.get.name == 'sapore_printers' %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Impressoras
@@ -61,6 +70,7 @@
                     </ul>
                 </li>
                 {%endif%}
+                {%if 'admin' in user.groups.get.name or user.groups.get.name == 'sapore_telecom' or user.groups.get.name == 'tg_telecom' %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Telecom
@@ -77,7 +87,6 @@
                                 <a class="dropdown-item" href="{% url 'vivobox_list' %}">VivoBox</a>
                             </ul>
                         </li>
-                        {%if '1' in '2'%}
                         <li class="dropdown-submenu">
                             <a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#">
                                 Fixa
@@ -87,9 +96,9 @@
                                 <a class="dropdown-item" href="{% url 'line_list' %}">Contratos</a>
                             </ul>
                         </li>
-                        {%endif%}
                     </ul>
                 </li>
+                {%endif%}
                 <li>
                     <a class="nav-link" href="{% url 'logout' %}">Sair</a>
                 </li>
