modified:   sapore_controle/settings.py 	renamed:    support/__init__.py -> supporters/__init__.py 	renamed:    support/admin.py -> supporters/admin.py 	renamed:    support/apps.py -> supporters/apps.py 	renamed:    support/migrations/__init__.py -> supporters/migrations/__init__.py 	renamed:    support/models.py -> supporters/models.py 	renamed:    support/tests.py -> supporters/tests.py 	renamed:    support/views.py -> supporters/views.py 	modified:   templates/partials/_nav.html

--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -48,7 +48,7 @@
                     </a>
                 </li>
                 {%endif%}
-                {%if 'admin' in user.groups.get.name or user.groups.get.name == 'sapore_support' %}
+                {%if 'admin' in user.groups.get.name or user.groups.get.name == 'sapore_supporters' %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Suporte Sede
