modified:   accounts/views.py 	new file:   branch/migrations/0001_initial.py 	modified:   branch/models.py 	renamed:    telecom/templates/telecom/branch_edit.html -> branch/templates/branch/branch_edit.html 	renamed:    telecom/templates/telecom/branch_list.html -> branch/templates/branch/branch_list.html 	modified:   branch/views.py 	modified:   sapore_controle/settings.py 	modified:   telecom/forms.py 	modified:   telecom/migrations/0001_initial.py 	deleted:    telecom/migrations/0002_branch_line_smartphone_vivobox_delete_usersession.py 	deleted:    telecom/migrations/0003_line_action_alter_line_plan.py 	deleted:    telecom/migrations/0004_alter_line_action.py 	deleted:    telecom/migrations/0005_alter_line_action_alter_line_plan.py 	deleted:    telecom/migrations/0006_line_consumption_line_vip_alter_line_status.py 	deleted:    telecom/migrations/0007_line_accountable_line_status_rfp.py 	deleted:    telecom/migrations/0008_uploadfile_alter_line_accountable_and_more.py 	modified:   telecom/models.py 	modified:   telecom/urls.py 	modified:   telecom/views.py 	modified:   templates/partials/_nav.html

--- a/branch/templates/branch/branch_edit.html
+++ b/branch/templates/branch/branch_edit.html
@@ -9,6 +9,9 @@
     </svg> Voltar</a>
 </div>
 <h1 class="mt-1">Atualizar Filiais</h1>
+{%for file in files%}
+    Última atualização - {{file.date_update}}
+{%endfor%}
 <form method="post" class="form-group" enctype="multipart/form-data">
     {% csrf_token %}
     {% include 'partials/_messages.html' %}
