new file:   branch/migrations/0002_alter_branch_branch.py 	modified:   branch/models.py 	modified:   telecom/forms.py 	renamed:    telecom/migrations/0001_initial.py -> telecom/migrations/0001_initial_squashed_0009_alter_uploadfile_file.py 	new file:   telecom/migrations/0010_boxmodel_smartmodel_telecomplanmodel_delete_branch_and_more.py 	new file:   telecom/migrations/0011_rename_telecomplanmodel_lineplanmodel_and_more.py 	new file:   telecom/migrations/0012_rename_lineplanmodel_lineplan.py 	new file:   telecom/migrations/0013_remove_boxmodel_date_release_and_more.py 	new file:   telecom/migrations/0014_alter_line_number_alter_lineplan_name_and_more.py 	modified:   telecom/models.py 	modified:   telecom/templates/telecom/dashboard.html 	new file:   telecom/templates/telecom/param/index.html 	new file:   telecom/templates/telecom/param/index_list.html 	new file:   telecom/templates/telecom/param/line_plan_add.html 	new file:   telecom/templates/telecom/param/line_plan_edit.html 	new file:   telecom/templates/telecom/param/line_plan_list.html 	new file:   telecom/templates/telecom/param/s_model_add.html 	new file:   telecom/templates/telecom/param/s_model_edit.html 	new file:   telecom/templates/telecom/param/s_model_list.html 	new file:   telecom/templates/telecom/param/v_model_add.html 	new file:   telecom/templates/telecom/param/v_model_edit.html 	new file:   telecom/templates/telecom/param/v_model_list.html 	modified:   telecom/urls.py 	modified:   telecom/views.py 	modified:   templates/partials/_nav.html

--- a/telecom/templates/telecom/dashboard.html
+++ b/telecom/templates/telecom/dashboard.html
@@ -139,14 +139,14 @@
                     <div class="card border-secondary px-3 py-3">
                         <form class="form my-2">
                         <h6><b>Modelos</b></h6>
-                        {% for smartphone in qs_smartphone_models %}
+                        {% for model in qs_smartphone_models %}
                         <div>
-                            {% if smartphone.s_model in qs_smartphone_filter_models %}
-                            <input name="smartphone_{{smartphone.s_model}}" id="smartphone_{{smartphone.s_model}}" type="checkbox" checked>
+                            {% if model in qs_smartphone_filter_models %}
+                            <input name="smartphone_{{model}}" id="smartphone_{{model}}" type="checkbox" checked>
                             {% else %}
-                            <input name="smartphone_{{smartphone.s_model}}" id="smartphone_{{smartphone.s_model}}" type="checkbox">
+                            <input name="smartphone_{{model}}" id="smartphone_{{model}}" type="checkbox">
                             {% endif %}
-                            <label for="smartphone_{{smartphone.s_model}}"> {{smartphone.s_model}}</label>
+                            <label for="smartphone_{{model}}"> {{model}}</label>
                         </div>
                         {% endfor %}
                         <div class="d-flex justify-content-between">
@@ -231,14 +231,14 @@
                     <div class="card border-secondary px-3 py-3">
                         <form class="form my-2">
                         <h6><b>Modelos</b></h6>
-                        {% for vivobox in qs_vivobox_models %}
+                        {% for model in qs_vivobox_models %}
                         <div>
-                            {% if vivobox.v_model in qs_vivobox_filter_models %}
-                            <input name="vivobox_{{vivobox.v_model}}" id="vivobox_{{vivobox.v_model}}" type="checkbox" checked>
+                            {% if model in qs_vivobox_filter_models %}
+                            <input name="vivobox_{{model}}" id="vivobox_{{model}}" type="checkbox" checked>
                             {% else %}
-                            <input name="vivobox_{{vivobox.v_model}}" id="vivobox_{{vivobox.v_model}}" type="checkbox">
+                            <input name="vivobox_{{model}}" id="vivobox_{{model}}" type="checkbox">
                             {% endif %}
-                            <label for="vivobox_{{vivobox.v_model}}"> {{vivobox.v_model}}</label>
+                            <label for="vivobox_{{model}}"> {{model}}</label>
                         </div>
                         {% endfor %}
                         <div class="d-flex justify-content-between">
