--- a/templates/base.html
+++ b/templates/base.html
@@ -27,5 +27,5 @@
     <script src="{% static 'vendor/jquery/jquery.slim.min.js' %}"></script>
     <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
-<!--Dev Marcelo Botan-->
+<!--Marcelo Botan-->
 </html>
