modified:   telecom/forms.py 	new file:   telecom/migrations/0015_lineplan_plan_type_alter_line_status_rfp_and_more.py 	modified:   telecom/models.py 	modified:   telecom/templates/telecom/param/line_plan_list.html 	modified:   telecom/views.py

--- a/telecom/templates/telecom/param/line_plan_list.html
+++ b/telecom/templates/telecom/param/line_plan_list.html
@@ -9,11 +9,13 @@
 
 {%block list_th%}
 <th><label scope="col">Plano</label></th>
+<th><label scope="col">Tipo</label></th>
 <th></th>
 {%endblock%}
 
 {%block list_tb%}
 <td>{{object.name}}</td>
+<td>{{object.plan_type}}</td>
 {%endblock%}
 
 {%block list_edit_url%}{% url 'line_plan_edit' object.id %}{%endblock%}
