modified:   branch/templates/branch/branch_edit.html 	modified:   branch/views.py 	modified:   telecom/forms.py 	modified:   telecom/models.py 	modified:   telecom/templates/telecom/param/s_model_add.html 	modified:   telecom/templates/telecom/param/v_model_add.html 	modified:   templates/base.html

--- a/telecom/templates/telecom/param/v_model_add.html
+++ b/telecom/templates/telecom/param/v_model_add.html
@@ -3,4 +3,4 @@
 {% block title %}Vivobox | Adicionar Modelo | Sapore{% endblock %}
 
 {%block back_url%}{% url 'v_model_list' %}{%endblock%}
-{%block title_form%}Adicionar Modelo{%endblock%}
+{%block title_form%}Adicionar Modelo de Vivobox{%endblock%}
