--- a/telecom/templates/telecom/param/s_model_add.html
+++ b/telecom/templates/telecom/param/s_model_add.html
@@ -3,4 +3,4 @@
 {% block title %}Smartphone | Adicionar Modelo | Sapore{% endblock %}
 
 {%block back_url%}{% url 's_model_list' %}{%endblock%}
-{%block title_form%}Adicionar Modelo{%endblock%}
+{%block title_form%}Adicionar Modelo de Smartphone{%endblock%}
